src/test/resources/parse/InvalidSemicolon.casc
class InvalidSemicolon

impl InvalidSemicolon {
    comp {
        a := 1;
    }
}